update default layers

--- a/src/flavors/willamette/config.yml
+++ b/src/flavors/willamette/config.yml
@@ -228,12 +228,12 @@ sidebar:
             - id: pins
               description: _(Important cleanup sites and areas of interest along the river)
               title: _(Important sites)
-              visibleDefault: true
+              visibleDefault: false
 
             - id: source-control
               description: _(Source control plan from Oregon Dept. of Environmental Quality (DEQ))
               title: _(Source control status)
-              visibleDefault: true
+              visibleDefault: false
 
             - id: alt-i
               title: _(EPA proposed plan (Alternative I))
