hide background page from menu

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -758,6 +758,7 @@ pages:
   - title: _(Background)
     slug: background
     name: background
+    hide_from_top_bar: true
 
   - title: _(Get involved)
     slug: getinvolved
