--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -489,7 +489,7 @@ place_types:
           iconUrl: /static/css/images/markers/marker-complaint.png
 
   editortest:
-    label: _(Question)
+    label: _(Editortest)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -1073,7 +1073,7 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your question:)
+          prompt: _(Title of your editortest:)
           display_prompt: _(Title:)
           placeholder: _(Enter title...)
           optional: false
