--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -516,7 +516,7 @@ place_types:
           iconAnchor: [19, 46]
 
   editortest:
-    label: _(Question)
+    label: _(Editortest)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -801,7 +801,7 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your question:)
+          prompt: _(Title of your editortest:)
           display_prompt: _(Title:)
           placeholder: _(Enter title...)
           optional: false
