--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -65,11 +65,11 @@ map:
       type: shareabouts
 
   # Legend Layers
-    - id: restoration
-      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-      type: landmark
-      sources:
-        - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+    # - id: restoration
+    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+    #   type: landmark
+    #   sources:
+    #     - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
     - id: duwamish
       type: place
@@ -79,43 +79,43 @@ map:
       type: place
       slug: editortest
 
-    - id: vision
-      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
-      sources:
-        - "http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
-      type: landmark
+    # - id: vision
+    #   url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+    #   sources:
+    #     - "http://a.tiles.mapbox.com/v4/smartercleanup.mfigd1mf/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+    #   type: landmark
 
-       # WRIA9 watershed
-    - id: watershed
-      type: cartodb
-      url: "https://heyduwamishcore.cartodb.com/api/v2/viz/61226fec-0399-11e6-8de1-0e31c9be1b51/viz.json"
+    #    # WRIA9 watershed
+    # - id: watershed
+    #   type: cartodb
+    #   url: "https://heyduwamishcore.cartodb.com/api/v2/viz/61226fec-0399-11e6-8de1-0e31c9be1b51/viz.json"
 
-    - id: cleanup
-      type: cartodb
-      url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
+    # - id: cleanup
+    #   type: cartodb
+    #   url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
 
-      # Land Use
-    - id: landuse
-      type: cartodb
-      url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
-      opacity: 0.5
+    #   # Land Use
+    # - id: landuse
+    #   type: cartodb
+    #   url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
+    #   opacity: 0.5
 
-      # Green Seattle Partnership restoration phases
-    - id: phases
-      type: cartodb
-      url: "https://gis206.cartodb.com/api/v2/viz/217a2e02-e729-11e5-9bd4-0e5db1731f59/viz.json"
+    #   # Green Seattle Partnership restoration phases
+    # - id: phases
+    #   type: cartodb
+    #   url: "https://gis206.cartodb.com/api/v2/viz/217a2e02-e729-11e5-9bd4-0e5db1731f59/viz.json"
 
-      # WMS Original Flow
-    - id: duwamish-original
-      url: https://smartercleanup.cartodb.com/api/v2/viz/ab34ca50-c6fc-11e5-ba65-0ecd1babdde5/viz.json
-      type: cartodb
-      opacity: 0.4
+    #   # WMS Original Flow
+    # - id: duwamish-original
+    #   url: https://smartercleanup.cartodb.com/api/v2/viz/ab34ca50-c6fc-11e5-ba65-0ecd1babdde5/viz.json
+    #   type: cartodb
+    #   opacity: 0.4
 
-      # Noxious Weeds
-    - id: noxious-weeds
-      type: cartodb
-      url: "https://hdbig.cartodb.com/api/v2/viz/f9350ac8-d677-11e5-980b-0e5db1731f59/viz.json"
-      opacity: 0.5
+    #   # Noxious Weeds
+    # - id: noxious-weeds
+    #   type: cartodb
+    #   url: "https://hdbig.cartodb.com/api/v2/viz/f9350ac8-d677-11e5-980b-0e5db1731f59/viz.json"
+    #   opacity: 0.5
 
     - id: cso
       type: json
@@ -632,59 +632,56 @@ sidebar:
               title: _(Community Reports)
               visibleDefault: true
 
-            - id: cleanup
-              title: _(River Cleanup Plan)
-              visibleDefault: true
+            # - id: cleanup
+            #   title: _(River Cleanup Plan)
+            #   visibleDefault: true
 
-            - id: vision
-              title: _(Community Vision)
-              visibleDefault: false
+            # - id: vision
+            #   title: _(Community Vision)
+            #   visibleDefault: true
 
-            - id: restoration
-              title: _(Restoration Sites)
-              visibleDefault: true
+            # - id: restoration
+            #   title: _(Restoration Sites)
+            #   visibleDefault: true
 
-        - id: grp-land
-          title: _(Land Data)
-          visibleDefault: false
-          layers:
-              # Land Use
-            - id: landuse
-              title: _(Land use)
-              visibleDefault: false
+        # - id: grp-land
+        #   title: _(Land Data)
+        #   visibleDefault: false
+        #   layers:
+              # Toggle our basemaps
+            # - id: toggle-satellite
+            #   title: _(Satellite View)
+            #   visibleDefault: false
 
-              # Green Seattle Partnership restoration phases
-            - id: phases
-              title: _(Green Seattle partnership)
-              visibleDefault: false
+            #   # Land Use
+            # - id: landuse
+            #   title: _(Land use)
+            #   visibleDefault: false
 
-              # Noxious Weeds
-            - id: noxious-weeds
-              title: _(Noxious Weeds)
-              visibleDefault: false
+            #   # Green Seattle Partnership restoration phases
+            # - id: phases
+            #   title: _(Green Seattle partnership)
+            #   visibleDefault: true
 
-            - id: cso
-              title: _(Sewer Overflow)
-              visibleDefault: false
+            #   # Noxious Weeds
+            # - id: noxious-weeds
+            #   title: _(Noxious Weeds)
+            #   visibleDefault: false
 
-              # WRIA9 watershed
-            - id: watershed
-              title: _(Watershed)
-              visibleDefault: true
+            #   # WRIA9 watershed
+            # - id: watershed
+            #   title: _(Watershed)
+            #   visibleDefault: true
 
-            - id: zoning
-              title: _(Zoning)
-              visibleDefault: false
+        # - id: grp-history
+        #   title: _(Historical Data)
+        #   visibleDefault: false
+        #   layers:
 
-        - id: grp-history
-          title: _(Historical Data)
-          visibleDefault: false
-          layers:
-
-              # WMS Original Flow
-            - id: duwamish-original
-              title: _(Original River Path)
-              visibleDefault: false
+        #       # WMS Original Flow
+        #     - id: duwamish-original
+        #       title: _(Original River Path)
+        #       visibleDefault: false
 
     - id: ticker
       view: ActivityView
