--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -591,7 +591,7 @@ sidebar:
 
             - id: cleanup
               title: _(River Cleanup Plan)
-              visibleDefault: true
+              visibleDefault: false
 
             - id: vision
               title: _(Community Vision)
