--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -376,6 +376,20 @@ place_types:
         icon:
           iconUrl: /static/css/images/markers/marker-tree.png      
 
+  pledge:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-dbcf2c.png
+
+  action:
+    zoomType: mapboxZoomStyle
+    rules:
+      - condition: 'true'
+        icon:
+          iconUrl: /static/css/images/markers/marker-f95016.png
+
   # # needs a marker
   # farm:
   #   zoomType: mapboxZoomStyle
@@ -697,6 +711,80 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
+    pledge:
+      includeOnForm: true
+      name: location_type
+      dataset: bogtobay
+      icon_url: /static/css/images/markers/marker-dbcf2c.png
+      value: pledge
+      label: _(Stewardship Pledge)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title)
+          display_prompt: _(Title of this tree:)
+          placeholder: _(Enter title)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Description)
+          display_prompt: _(Description of this tree:)
+          placeholder: _(Description...)
+          optional: false
+        - name: pollution_type
+          type: checkbox_big_buttons
+          prompt: _(Types of pollution seen:)
+          display_prompt: _(I saw the following types of pollution here:)
+          content:
+            - label: _(Scoop the poop)
+              value: sewage
+            - label: _(Tires)
+              value: tires
+            - label: _(Illegal dumpsite)
+              value: dumpsite
+            - label: _(Litter)
+              value: litter
+            - label: _(Other)
+              value: other
+          optional: true 
+          # NOTE: checkbox_big_button inputs have no validation
+    action:
+      includeOnForm: true
+      name: location_type
+      dataset: bogtobay
+      icon_url: /static/css/images/markers/marker-f95016.png
+      value: action
+      label: _(Stewardship Action)
+      fields:
+        - name: title
+          type: text
+          prompt: _(Title)
+          display_prompt: _(Title of this tree:)
+          placeholder: _(Enter title)
+          optional: false
+        - name: description
+          type: textarea
+          prompt: _(Description)
+          display_prompt: _(Description of this tree:)
+          placeholder: _(Description...)
+          optional: false
+        - name: pollution_type
+          type: checkbox_big_buttons
+          prompt: _(Types of pollution seen:)
+          display_prompt: _(I saw the following types of pollution here:)
+          content:
+            - label: _(Scoop the poop)
+              value: sewage
+            - label: _(Tires)
+              value: tires
+            - label: _(Illegal dumpsite)
+              value: dumpsite
+            - label: _(Litter)
+              value: litter
+            - label: _(Other)
+              value: other
+          optional: true 
+          # NOTE: checkbox_big_button inputs have no validation
     observation:
       includeOnForm: true
       name: location_type
@@ -935,80 +1023,6 @@ place:
           prompt: _(Provide any additional comments)
           display_prompt: _(Additional comments:)
           optional: true   
-    pledge:
-      includeOnForm: true
-      name: location_type
-      dataset: bogtobay
-      icon_url: /static/css/images/markers/marker-tree.png
-      value: pledge
-      label: _(Stewardship Pledge)
-      fields:
-        - name: title
-          type: text
-          prompt: _(Title)
-          display_prompt: _(Title of this tree:)
-          placeholder: _(Enter title)
-          optional: false
-        - name: description
-          type: textarea
-          prompt: _(Description)
-          display_prompt: _(Description of this tree:)
-          placeholder: _(Description...)
-          optional: false
-        - name: pollution_type
-          type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
-          content:
-            - label: _(Scoop the poop)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
-            - label: _(Litter)
-              value: litter
-            - label: _(Other)
-              value: other
-          optional: true 
-          # NOTE: checkbox_big_button inputs have no validation
-    action:
-      includeOnForm: true
-      name: location_type
-      dataset: bogtobay
-      icon_url: /static/css/images/markers/marker-tree.png
-      value: action
-      label: _(Stewardship Action)
-      fields:
-        - name: title
-          type: text
-          prompt: _(Title)
-          display_prompt: _(Title of this tree:)
-          placeholder: _(Enter title)
-          optional: false
-        - name: description
-          type: textarea
-          prompt: _(Description)
-          display_prompt: _(Description of this tree:)
-          placeholder: _(Description...)
-          optional: false
-        - name: pollution_type
-          type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
-          content:
-            - label: _(Scoop the poop)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
-            - label: _(Litter)
-              value: litter
-            - label: _(Other)
-              value: other
-          optional: true 
-          # NOTE: checkbox_big_button inputs have no validation
 
   # define form elements that appear on every form here
   common_form_elements:
