--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -705,8 +705,8 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
-      includeOnForm: false
+    - category: observation
+      includeOnForm: true
       name: location_type
       dataset: duwamish
       icon_url: /static/css/images/markers/marker-observation.png
@@ -741,8 +741,8 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
-      includeOnForm: false
+    - category: question
+      includeOnForm: true
       name: location_type
       dataset: duwamish
       icon_url: /static/css/images/markers/marker-question.png
@@ -760,8 +760,8 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
-      includeOnForm: false
+    - category: idea
+      includeOnForm: true
       name: location_type
       dataset: duwamish
       icon_url: /static/css/images/markers/marker-idea.png
@@ -780,8 +780,8 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
-      includeOnForm: false
+    - category: complaint
+      includeOnForm: true
       name: location_type
       dataset: duwamish
       icon_url: /static/css/images/markers/marker-complaint.png
@@ -800,8 +800,8 @@ place:
           display_prompt: _(I have the following complaint:)
           placeholder: _(Description...)
           optional: false
-    air_watch:  #defines a top-level form category
-      includeOnForm: false
+    - category: air_watch  #defines a top-level form category
+      includeOnForm: true
       name: location_type  #needs to be "location_type"
       dataset: air
       icon_url: /static/css/images/markers/marker-greenwall.png  #TEMPORARY
@@ -941,8 +941,8 @@ place:
           type: text
           prompt: _(Provide any additional comments)
           display_prompt: _(Additional comments:)
-          optional: true   
-    tree:
+          optional: true 
+    - category: tree
       includeOnForm: true
       name: location_type
       dataset: trees
