delete unnecessary files

--- a/src/flavors/greenways/config.yml
+++ b/src/flavors/greenways/config.yml
@@ -3,7 +3,7 @@ app:
   # HTML Title
   title: Seattle Neighborhood Greenways
   # Header name
-  name: "Seattle Greenways"
+  name: "Seattle Neighborhood Greenways"
   # Meta description that will show up in Google search results
   meta_description: "_(Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.)"
   # Meta author that will show up in Google search results
@@ -17,15 +17,15 @@ app:
   # Optional. List view is supported by default. Set to false to disable.
   # list_enabled: false
 
-languages:
-  - code: en
-    label: I Speak English
+# languages:
+#   - code: en
+#     label: I Speak English
 
-  - code: es
-    label: Hablo Español
+#   - code: es
+#     label: Hablo Español
 
-  - code: vi
-    label: tôi nói tiếng việt
+#   - code: vi
+#     label: tôi nói tiếng việt
 
 
 map:
@@ -68,17 +68,9 @@ map:
       sources:
         - "http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
 
-    - id: duwamish
+    - id: greenways
       type: place
       slug: report
-
-    - id: trees
-      type: place
-      slug: trees
-
-    - id: air
-      type: place
-      slug: air
 
     - id: vision
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
@@ -95,7 +87,7 @@ map:
       type: cartodb
       url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
 
-    - id: greenways
+    - id: greenways_layer
       type: cartodb
       url: "https://lenswork64.carto.com/api/v2/viz/d59f6828-6b15-11e6-bed3-0e233c30368f/viz.json"
 
@@ -197,24 +189,6 @@ map:
 # The values map the place type to map icons (defined below).
 place_types:
 
-  georgetownZoomStyle:
-    - condition: '{{layer.focused}} === true'
-      icon:
-        iconSize: [60, 60]
-        iconAnchor: [30, 30]
-    - condition: '{{map.zoom}} < 15'
-      icon:
-        iconSize: [7.5, 7.5]
-        iconAnchor: [4, 4]
-    - condition: '{{map.zoom}} < 17'
-      icon:
-        iconSize: [25, 25]
-        iconAnchor: [12.5, 12.5]
-    - condition: '{{map.zoom}} >= 17'
-      icon:
-        iconSize: [40, 40]
-        iconAnchor: [20, 20]
-
   mapboxZoomStyle:
     - condition: '{{layer.focused}} === true'
       icon:
@@ -228,95 +202,6 @@ place_types:
       icon:
         iconSize: [30, 30]
         iconAnchor: [15, 15]
-
-  wetland:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-land_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-land_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-land_no-prog-or-dead.png
-  park:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-parks_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-parks_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-parks_no-prog-or-dead.png
-
-  school:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-qual_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-qual_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-qual_no-prog-or-dead.png
-
-  police:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-safe_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-safe_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-safe_no-prog-or-dead.png
-
-  rail:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-transp_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-transp_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-transp_no-prog-or-dead.png
-
-  town-hall:
-    zoomType: georgetownZoomStyle
-    rules:
-      - condition: '"{{properties.marker-color}}" == "a3e46b"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-hist_comp.png
-
-      - condition: '"{{properties.marker-color}}" == "f1f075"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-hist_prog.png
-
-      - condition: '"{{properties.marker-color}}" == "f86767"'
-        icon:
-          iconUrl: /static/css/images/markers/marker-hist_no-prog-or-dead.png
 
   mapbox:
     # Mapbox Points
@@ -338,72 +223,8 @@ place_types:
           fillOpacity: '{{properties.fill-opacity}}'
           weight: "{{properties.stroke-width}}"
 
-  danger:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-construction.png
-
-  park2:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-heart.png
-
-  industrial:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-industrial.png
-
-  bicycle:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-bike.png
-
-  swimming:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-swimming.png
-
-  theatre:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-art.png
-
-  zoo:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-whale.png
-
-  tree:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-tree.png    
-
-  # # needs a marker
-  # farm:
-  #   zoomType: mapboxZoomStyle
-  #   rules:
-  #     - condition: 'true'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/dot-0d85e9.png
-
-  observation:
-    label: _(Observation)
+  vegetation:
+    label: _(Vegetation)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -432,8 +253,8 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  question:
-    label: _(Question)
+  signage:
+    label: _(Signage)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -462,8 +283,8 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  idea:
-    label: _(Idea)
+  pavement:
+    label: _(Pavement)
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
@@ -522,36 +343,6 @@ place_types:
           iconSize: [38, 46]
           iconAnchor: [19, 46]
 
-  # greenwall:
-  #   label: _(Green Screen Vote)
-  #   rules:
-  #     - condition: '{{layer.focused}} === true'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         shadowUrl: /static/css/images/marker-shadow.png
-  #         iconSize: [50, 60]
-  #         iconAnchor: [25, 60]
-  #         shadowSize: [50, 60]
-  #         shadowAnchor: [14, 60]
-
-  #     - condition: '{{map.zoom}} < 15'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [10, 12]
-  #         iconAnchor: [5, 12]
-
-  #     - condition: '{{map.zoom}} < 18'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [18, 21.75]
-  #         iconAnchor: [9, 21.75]
-
-  #     - condition: '{{map.zoom}} >= 18'
-  #       icon:
-  #         iconUrl: /static/css/images/markers/marker-greenwall.png
-  #         iconSize: [38, 46]
-  #         iconAnchor: [19, 46]
-
   # using temporary icons
   air_watch:
     label: _(Air Watch)
@@ -607,7 +398,7 @@ sidebar:
               title: _(Community Reports)
               visibleDefault: true
 
-            - id: greenways
+            - id: greenways_layer
               title: _(Greenways)
               visibleDefault: true
 
@@ -727,10 +518,10 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    - category: observation
+    - category: vegetation
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: greenways
       icon_url: /static/css/images/markers/marker-observation.png
       value: vegetation
       label: _(Vegetation)
