--- a/src/flavors/rail/config.yml
+++ b/src/flavors/rail/config.yml
@@ -37,9 +37,9 @@ map:
 
   options:
     center:
-      lat: 47.53722
-      lng: -122.32573
-    zoom: 16
+      lat: 39.02772
+      lng: -98.87695
+    zoom: 5
     minZoom: 1
     maxZoom: 18
 
@@ -60,7 +60,7 @@ map:
       type: cartodb
       url: "https://hdbig.carto.com/api/v2/viz/16801b48-76d4-11e6-82e9-0ecd1babdde5/viz.json"
 
-    - id: duwamish
+    - id: rail
       type: place
       slug: report
 
@@ -85,8 +85,10 @@ place_types:
       - condition: '{{map.zoom}} < 16'
         icon:
           iconUrl: /static/css/images/markers/marker-observation.png
-          iconSize: [15, 18]
-          iconAnchor: [7.5, 18]
+          # iconSize: [15, 18]
+          # iconAnchor: [7.5, 18]
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
 
       - condition: '{{map.zoom}} >= 16'
         icon:
@@ -106,17 +108,13 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-      - condition: '{{map.zoom}} < 11'
-        icon:
-          iconUrl: /static/css/images/markers/dot-dbcf2c.png
-          iconSize: [10, 12]
-          iconAnchor: [5, 12]
-
       - condition: '{{map.zoom}} < 16'
         icon:
           iconUrl: /static/css/images/markers/marker-question.png
-          iconSize: [15, 18]
-          iconAnchor: [7.5, 18]
+          # iconSize: [15, 18]
+          # iconAnchor: [7.5, 18]
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
 
       - condition: '{{map.zoom}} >= 16'
         icon:
@@ -136,17 +134,13 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-      - condition: '{{map.zoom}} < 11'
-        icon:
-          iconUrl: /static/css/images/markers/dot-f95016.png
-          iconSize: [10, 12]
-          iconAnchor: [5, 12]
-
       - condition: '{{map.zoom}} < 16'
         icon:
           iconUrl: /static/css/images/markers/marker-idea.png
-          iconSize: [15, 18]
-          iconAnchor: [7.5, 18]
+          # iconSize: [15, 18]
+          # iconAnchor: [7.5, 18]
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
 
       - condition: '{{map.zoom}} >= 16'
         icon:
@@ -166,54 +160,19 @@ place_types:
           shadowSize: [50, 60]
           shadowAnchor: [14, 60]
 
-      - condition: '{{map.zoom}} < 11'
-        icon:
-          iconUrl: /static/css/images/markers/marker-complaint.png
-          iconSize: [10, 12]
-          iconAnchor: [5, 12]
-
       - condition: '{{map.zoom}} < 16'
         icon:
           iconUrl: /static/css/images/markers/marker-complaint.png
-          iconSize: [15, 18]
-          iconAnchor: [7.5, 18]
-
+          # iconSize: [15, 18]
+          # iconAnchor: [7.5, 18]
+          iconSize: [38, 46]
+          iconAnchor: [19, 46]
+          
       - condition: '{{map.zoom}} >= 16'
         icon:
           iconUrl: /static/css/images/markers/marker-complaint.png
           iconSize: [38, 46]
           iconAnchor: [19, 46]
-
-  greenwall:
-    label: _(Green Screen Vote)
-    rules:
-      - condition: '{{layer.focused}} === true'
-        icon:
-          iconUrl: /static/css/images/markers/marker-greenwall.png
-          shadowUrl: /static/css/images/marker-shadow.png
-          iconSize: [50, 60]
-          iconAnchor: [25, 60]
-          shadowSize: [50, 60]
-          shadowAnchor: [14, 60]
-
-      - condition: '{{map.zoom}} < 15'
-        icon:
-          iconUrl: /static/css/images/markers/marker-greenwall.png
-          iconSize: [10, 12]
-          iconAnchor: [5, 12]
-
-      - condition: '{{map.zoom}} < 18'
-        icon:
-          iconUrl: /static/css/images/markers/marker-greenwall.png
-          iconSize: [18, 21.75]
-          iconAnchor: [9, 21.75]
-
-      - condition: '{{map.zoom}} >= 18'
-        icon:
-          iconUrl: /static/css/images/markers/marker-greenwall.png
-          iconSize: [38, 46]
-          iconAnchor: [19, 46]
-
 
 # Sidebar and activity stream should be enabled and disabled together!
 # note: sidebar is aka 'MasterLegend'
@@ -304,7 +263,7 @@ place:
     - category: observation
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: rail
       icon_url: /static/css/images/markers/marker-observation.png
       value: observation
       label: _(Observation)
@@ -315,22 +274,6 @@ place:
           display_prompt: _(Title:)
           placeholder: _(Enter title...)
           optional: false
-        - name: pollution_type
-          type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
-          content:
-            - label: _(Sewage)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
-            - label: _(Litter)
-              value: litter
-            - label: _(Other)
-              value: other
-          optional: true # NOTE: checkbox_big_button inputs have no validation
         - name: description
           type: textarea
           prompt: _(Description of this pollution:)
@@ -340,7 +283,7 @@ place:
     - category: question
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: rail
       icon_url: /static/css/images/markers/marker-question.png
       value: question
       label: _(Question)
@@ -359,7 +302,7 @@ place:
     - category: idea
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: rail
       icon_url: /static/css/images/markers/marker-idea.png
       value: idea
       label: _(Idea)
@@ -379,7 +322,7 @@ place:
     - category: complaint
       includeOnForm: true
       name: location_type
-      dataset: duwamish
+      dataset: rail
       icon_url: /static/css/images/markers/marker-complaint.png
       value: complaint
       label: _(Complaint)
@@ -396,16 +339,6 @@ place:
           display_prompt: _(I have the following complaint:)
           placeholder: _(Description...)
           optional: false
-    - category: greenwall
-      includeOnForm: false
-      name: location_type
-      dataset: duwamish
-      icon_url: /static/css/images/markers/marker-greenwall.png
-      value: greenwall
-      label: _(Greenwall)
-      fields:
-        - name: name
-          type: text
 
   # define form elements that appear on every form here
   common_form_elements:
