--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -773,6 +773,10 @@ pages:
     name: sponsors
     hide_from_top_bar: true
 
+  - slug: terms
+    name: terms
+    hide_from_top_bar: true
+
   - slug: youthcorps2015
     name: youthcorps2015
     hide_from_top_bar: true
